fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Activated_On__c.field-meta.xml
<CustomField>
    <fullName>Activated_On__c</fullName>
    <label>Activated On</label>
    <type>Date</type>
    <description>Date the service was activated in the network.</description>
</CustomField>