fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <description>Free-form dispatch and provisioning notes entered by agents.</description>
</CustomField>