fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <description>Kind of service order (New, Upgrade, Downgrade, Disconnect).</description>
</CustomField>