fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Ordered_On__c.field-meta.xml
<CustomField>
    <fullName>Ordered_On__c</fullName>
    <label>Ordered On</label>
    <type>Date</type>
    <description>Date the customer placed the order.</description>
</CustomField>