fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <label>Priority Level</label>
    <type>Number</type>
</CustomField>