fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Status__c</fullName>
    <label>Provisioning Status</label>
    <type>Picklist</type>
    <description>Where the order sits in the provisioning workflow.</description>
</CustomField>