fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Rbk__c.field-meta.xml
<CustomField>
    <fullName>Rbk__c</fullName>
    <label>Rbk</label>
    <type>Text</type>
</CustomField>