fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <label>Service Code</label>
    <type>Text</type>
    <description>Catalogue code identifying the provisioned service.</description>
</CustomField>