fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/SLA_Breached__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breached__c</fullName>
    <label>SLA Breached</label>
    <type>Checkbox</type>
    <description>True if the provisioning SLA was missed for this order.</description>
</CustomField>