fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Text</type>
    <description>Status</description>
</CustomField>