fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Svc_Cd__c.field-meta.xml
<CustomField>
    <fullName>Svc_Cd__c</fullName>
    <label>Svc Cd</label>
    <type>Text</type>
</CustomField>