fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Tech1_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Tech1_Assigned__c</fullName>
    <label>Tech 1 Assigned</label>
    <type>Text</type>
</CustomField>