fixtures/messy_org/force-app/main/default/objects/Service_Order__c/fields/Tech2_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Tech2_Assigned__c</fullName>
    <label>Tech 2 Assigned</label>
    <type>Text</type>
</CustomField>